--- a/src/components/App/styles/team.css
+++ b/src/components/App/styles/team.css
@@ -43,11 +43,17 @@
     vertical-align:bottom;
     text-align:center;
 }
+.team-member-social-icon{
+    margin-right:15px;
+    margin-left:15px;
+    color:black;
+}
 
 .team-member-desc{
-    font-size: 0.9em;
+    font-size: 0.8em;
     text-align:center;
     font-weight:bold;
+    padding-top:20px;
     padding-right: 5px;
     padding-left: 5px;
 }
