--- a/src/components/App/styles/footer.css
+++ b/src/components/App/styles/footer.css
@@ -15,3 +15,10 @@
     background-color:black;
     height:100px;
 }
+
+.footer-item{
+    height: 100px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
