--- a/src/components/App/styles/navbar.css
+++ b/src/components/App/styles/navbar.css
@@ -1,10 +1,12 @@
 
 .nav-item{
-    padding-left:15px;
-    padding-right:15px;
 }
 .nav-link{
     color: white !important;
+}
+.navbar-nav{
+    padding-left:15px !important;
+    padding-right:15px !important;
 }
 
 .navbar-nav-center{
