--- a/src/components/App/styles/home.css
+++ b/src/components/App/styles/home.css
@@ -38,15 +38,71 @@
 .home-middle{
     background: linear-gradient(to bottom, #0B0F12, #30343D);
 }
+.home-middle-img{
+    background-image: url(https://tron.watch/images/@2xMacBook%20Pro.png);
+    background-size: 100%;
+    background-position:top left;
+    background-repeat: no-repeat;
+}
+
 .key-features-h{
-    margin-top:1em;
+    margin-top:0.5em;
+    margin-bottom:0.5em;
     text-align:center;
     color:white;
     font-size: 3em;
+}
+
+.key-feature {
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: 200px 200px;
+    padding-top:230px;
+
+}
+
+.feature-built{
+    background-image:url(https://tron.watch/images/@2xicon_01.png);
+}
+.feature-trust{
+    background-image:url(https://tron.watch/images/@2xicon_02.png);
+}
+.feature-os{
+    background-image:url(https://tron.watch/images/@2xicon_03.png);
 }
 
 .key-feature-title{
     color: white;
     text-align:center;
     font-weight: bold;
+}
+.key-feature-desc{
+    color:white;
+    text-align: center;
+    font-size: 0.8em;
+}
+
+.home-trust-h{
+    margin-top:2em;
+    font-size: 2em;
+    color:white;
+}
+.home-trust-desc{
+    font-size: 0.9em;
+    color:white;
+    margin-bottom:100px;
+}
+.home-red{
+    padding-top:80px;
+    padding-bottom:80px;
+}
+.home-red-h{
+    font-size: 3em;
+    color:white;
+    text-align: center;
+}
+
+.home-red-desc{
+    color:white;
+    text-align: center;
 }
