--- a/src/components/App/styles/team.css
+++ b/src/components/App/styles/team.css
@@ -1,5 +1,6 @@
 .team-member-card{
-    margin-top: 25px;
+    margin-bottom: 15px;
+    margin-top: 15px;
     padding: 5px;
 }
 .team-member-card-inner{
