--- a/src/Pages/Team/style.css
+++ b/src/Pages/Team/style.css
@@ -2,6 +2,7 @@
     margin-bottom: 15px;
     margin-top: 15px;
 }
+
 .team-member-card-inner {
     background-color:#F2F2F2;
     border-radius: 10px;
@@ -24,14 +25,14 @@
 .team-member-name {
     padding-top: 20px;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 18px;
     font-weight: bold;
 }
 
 .team-member-title {
     text-align: center;
     color: #EA5651;
-    font-size: 0.9em;
+    font-size: 13px;
     margin: 0;
 }
 
@@ -66,4 +67,5 @@
     display: flex;
     flex-wrap: wrap;
     padding: 15px 0;
+    margin: 60px 0;
 }
