--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -2,6 +2,16 @@
     padding-bottom: 30px;
 }
 
+.container.intro a {
+    font-size: 40px;
+    color: #fff;
+    transition: 200ms;
+}
+
+.container.intro a:hover {
+    text-shadow: 0px 0px 5px #fff;
+}
+
 .home-h {
     color: white;
 }
@@ -129,4 +139,8 @@
     text-align: center;
     
     margin: 0;
+}
+
+.hot-cold-container {
+    padding: 125px 0px;
 }
