--- a/src/Pages/Projects/style.css
+++ b/src/Pages/Projects/style.css
@@ -1,3 +1,7 @@
+.header-h2 span {
+    line-height: 20px;
+}
+
 .feature {
     margin-bottom: 90px;
 }
@@ -31,6 +35,14 @@
     padding-bottom: 3px;
 }
 
+.feature-desc h1 a {
+    color: #e93a36;
+}
+
+.feature-desc h1 a:hover {
+    color: #f24e4a;
+}
+
 .feature-desc h2 {
     margin: 0;
     padding: 0;
@@ -48,4 +60,5 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     line-height: 24px;
+    white-space: pre-line;
 }
