--- a/src/components/Logo/style.css
+++ b/src/components/Logo/style.css
@@ -1,5 +1,5 @@
 .logo{
-    background-image:url('https://tron.watch/images/@2xLogo.png');
+    background-image:url('./@2xLogo.png');
     background-position: center;
     background-size:contain;
     background-repeat: no-repeat;
